--- a/dev/scss/modules/_nav-menu.scss
+++ b/dev/scss/modules/_nav-menu.scss
@@ -3,9 +3,12 @@ nav.nav-menu{
 	// padding: 3px 0;
 	margin-right: 15px;
 	cursor: pointer;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 	.nav-wrapper{
 		width: 100%;
-		height: 100%;
+		height: 8px;
 		position: relative;
 		border: none;
 		background-color: transparent;
@@ -19,12 +22,12 @@ nav.nav-menu{
 		.burger-line-1{
 			width: 100%;
 			right: 0;
-			top: 3px;
+			top: 0;
 		}
 		.burger-line-2{
 			width: 50%;
 			right: 0;
-			bottom: 3px;
+			bottom: 0;
 		}
 		[class*="close-line-"]{
 			transform-origin:center;
@@ -32,8 +35,6 @@ nav.nav-menu{
 			top: 50%;
 			left: 50%;
 			opacity: 0;
-			pointer-events: none;
-			// @include transitions-ease(.5s)
 			@include trans-ease-delay(.4s, .3s);
 		}
 		.close-line-1{
