--- a/dev/assets/project-brand-cred.pug
+++ b/dev/assets/project-brand-cred.pug
@@ -26,15 +26,14 @@ block content
 						p The final designs were eventually featured on Hypebae. Have we seen a streetwear brand and credit card company join forces yet? No, but maybe streetwear or sneaker cryptocurrency will actually be the next thing.
 						p What we’ll certainly continue doing is creating anything, whether it’s a one off project or an entire series, simply because we feel it should exist in the world.
 			.p-photo1
-				img(src="./img/project-img-1.jpg", alt="")
+				img(src="https://www.fillmurray.com/1920/787", alt="")
 			.img-wrapper
 				.p-photo3
-					img(src="./img/project-img-2.jpg", alt="")
+					img(src="https://www.fillmurray.com/955/787", alt="")
 				.p-photo2
-					img(src="./img/project-img-3.jpg", alt="")
-			include _modules/slider.pug
-
-			section.video-wrapper.snj-col-12
+					img(src="https://www.fillmurray.com/955/787", alt="")
+			+slider-projects("https://www.fillmurray.com/893/591", "https://www.fillmurray.com/893/591", "https://www.fillmurray.com/893/591", "https://www.fillmurray.com/893/591", "", "", "", "")
+			section.video-wrapper.snj-col-12.fill-mini
 				video(src="")
 				button.btn-circle
 					.btn-c-init
