--- a/dev/assets/project-manage-puma.pug
+++ b/dev/assets/project-manage-puma.pug
@@ -4,7 +4,7 @@ block preloader
 block content
 	.snj-container-fluid.project-page
 		.row
-			section.project-about
+			section.project-about#content-puma
 				//- .background-wrapper.p-about-bg
 				+hero-project("Content Creation & Management","Puma", "01")
 				.especifications-wrap.snj-col-10.offset-1.snj-col-md-6.offset-md-3
@@ -20,23 +20,23 @@ block content
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Instagram Launch & Management 
 					div.paragraph-left.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
-						p We worked with PUMA Middle East to create the brand’s first non-global Instagram account: <a (href="https://www.instagram.com/junglebeige/")>@pumame.</a> It’s something we had to pitch internally to PUMA global, and it came with significant risks.
+						p We worked with PUMA Middle East to create the brand’s first non-global Instagram account: <a href="https://www.instagram.com/pumame//">@pumame.</a> It’s something we had to pitch internally to PUMA global, and it came with significant risks.
 
-						p Basically, if we messed up, we jeopardized the chance of other countries or regions in the world that wanted their own IG account. Thankfully, we did the opposite and the success of <a (href="https://www.instagram.com/junglebeige/")>@pumame</a> paved the way for all the other local accounts that now exist, from India to South Africa.
+						p Basically, if we messed up, we jeopardized the chance of other countries or regions in the world that wanted their own IG account. Thankfully, we did the opposite and the success of <a href="https://www.instagram.com/pumame//">@pumame</a> paved the way for all the other local accounts that now exist, from India to South Africa.
 					div.paragraph-right.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
-						p We have the privilege of managing the <a (href="https://www.instagram.com/junglebeige/")>@pumame</a> account completely: strategy, content production, community management and reporting. Something that keeps us informed and sharp on a global level. 
+						p We have the privilege of managing the <a href="https://www.instagram.com/pumame//">@pumame</a> account completely: strategy, content production, community management and reporting. Something that keeps us informed and sharp on a global level. 
 
 						p In just a few years, the account reached over 100k followers and continues to “put on” for the region’s talent, from photographers to musicians. It’s a project, and relationship, that has significantly helped establish our place in the market. More importantly, it has helped strengthen our relationship with the regional community of athletes, artists and creatives that we consider peers and allies. 
 			.p-photo1
-				img(src="./img/project-img-1.jpg", alt="")
+				img(src="./img/projects/content-puma/2-content-puma-photo.jpg", alt="")
 			.img-wrapper
 				.p-photo3
-					img(src="./img/project-img-2.jpg", alt="")
+					img(src="./img/projects/content-puma/3-content-puma-photo.jpg", alt="")
 				.p-photo2
-					img(src="./img/project-img-3.jpg", alt="")
-			include _modules/slider.pug
+					img(src="./img/projects/content-puma/4-content-puma-photo.jpg", alt="")
+			+slider-projects("./img/projects/content-puma/5-content-puma-slide.jpg", "./img/projects/content-puma/6-content-puma-slide.jpg", "./img/projects/content-puma/7-content-puma-slide.jpg", "./img/projects/content-puma/8-content-puma-slide.jpg", "", "", "", "")
 
-			section.video-wrapper.snj-col-12
+			section.video-wrapper.contentPuma-video-mini.snj-col-12
 				video(src="")
 				button.btn-circle
 					.btn-c-init
