arreglo de las fotografias en distintos dispositivos

--- a/dev/assets/project-commerce-amongst.pug
+++ b/dev/assets/project-commerce-amongst.pug
@@ -25,7 +25,7 @@ block content
 						p While the knowledge, style and warmth of the store staff isn’t easily translated online, we can still provide an efficient and flexible experience - shopping by brand, size, price range and even color.
 						p True digital transformation isn’t complete without the other elements of the shopping experience, such as the brand’s social media channels, as well as the visuals, tone and offers of its newsletter. It’s all one ecosystem that is carefully crafted in order to ensure the customer can easily access what they’re looking for, and always come away understanding what the brand is about and can continually offer.
 			.p-photo1
-				img(src="./img/projects/commerce-amongst/3-commerce-amongst.jpg", alt="")
+				img(src="https://www.fillmurray.com/1920/787", alt="")
 			.img-wrapper
 				.p-photo3
 					img(src="./img/projects/commerce-amongst/3-commerce-amongst-photo.jpg", alt="")
