--- a/dev/assets/project-manage-coffee.pug
+++ b/dev/assets/project-manage-coffee.pug
@@ -2,7 +2,7 @@ extends _templates/layout.pug
 block preloader
 	//- .preloader.color-2
 block content
-	.snj-container-fluid.project-page
+	.snj-container-fluid.project-page#coffee-project
 		.row
 			section.project-about.hero-background#coffee-hero
 				+hero-project("Content Creation & Management","Cartel Coffee","02")
