--- a/dev/assets/project-manage-puma.pug
+++ b/dev/assets/project-manage-puma.pug
@@ -2,7 +2,7 @@ extends _templates/layout.pug
 block preloader
 	//- .preloader.color-2
 block content
-	.snj-container-fluid.project-page
+	.snj-container-fluid.project-page#manage-puma-project
 		.row
 			section.project-about#content-puma
 				//- .background-wrapper.p-about-bg
