--- a/dev/assets/project-social-power.pug
+++ b/dev/assets/project-social-power.pug
@@ -3,7 +3,7 @@ extends _templates/layout.pug
 block preloader
 	//- .preloader.color-2
 block content
-	.snj-container-fluid.project-page
+	.snj-container-fluid.project-page#power-horse-project
 		.row
 			section.project-about#power-horse-hero
 				//- .background-wrapper.p-about-bg
@@ -29,13 +29,13 @@ block content
 
 						p When competitors went mainstream, we went underground. It’s made the difference ever since. 
 			.p-photo1
-				img(src="./img/projects/power-horse/2-power-photo.jpg", alt="")
+				img(src="https://www.fillmurray.com/1920/787", alt="")
 			.img-wrapper
 				.p-photo3
-					img(src="https://www.fillmurray.com/955/787", alt="")
+					img(src="./img/projects/power-horse/3-power-photo.jpg", alt="")
 				.p-photo2
 					img(src="https://www.fillmurray.com/955/787", alt="")
-			+slider-projects("https://www.fillmurray.com/893/591", "https://www.fillmurray.com/893/591", "https://www.fillmurray.com/893/591", "https://www.fillmurray.com/893/591", "", "", "", "")
+			+slider-projects("./img/projects/power-horse/5-power-slide.jpg", "./img/projects/power-horse/6-power-slide.jpg", "https://www.fillmurray.com/893/591", "https://www.fillmurray.com/893/591", "", "", "", "")
 			
 			section.video-wrapper.powerhorse-video-mini.snj-col-12
 				video(src="")
