--- a/dev/assets/_templates/layout.pug
+++ b/dev/assets/_templates/layout.pug
@@ -35,7 +35,7 @@ html(class='no-js')
 		include ../_modules/slider.pug
 
 		//- include ../_modules/grid-lines.pug
-		//- include ../_modules/grid-lines-full.pug
+		include ../_modules/grid-lines-full.pug
 
 		//- include ../_modules/intro.pug
 		
