--- a/dev/assets/project-commerce-amongst.pug
+++ b/dev/assets/project-commerce-amongst.pug
@@ -4,7 +4,7 @@ block preloader
 block content
 	.snj-container-fluid.project-page#commerce-amongst-project
 		.row
-			section.project-about#commerce-amongst-hero
+			section.project-about.project-bg-commerce-amongst
 				+hero-project("E-commerce","Amongst Few","01")
 				.especifications-wrap.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					aside.especifications
