--- a/dev/assets/project-event-amongst.pug
+++ b/dev/assets/project-event-amongst.pug
@@ -4,7 +4,7 @@ block preloader
 block content
 	.snj-container-fluid.project-page
 		.row
-			section.project-about#event-amongst-hero
+			section.project-about.project-bg-event-amongst
 				+hero-project("Event Curation","Amongst Few","02")
 				.especifications-wrap.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					aside.especifications
