--- a/dev/assets/project-manage-coffee.pug
+++ b/dev/assets/project-manage-coffee.pug
@@ -4,7 +4,7 @@ block preloader
 block content
 	.snj-container-fluid.project-page#coffee-project
 		.row
-			section.project-about.hero-background#coffee-hero
+			section.project-about.hero-background.project-bg-coffee
 				+hero-project("Content Creation & Management","Cartel Coffee","02")
 				.especifications-wrap.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					aside.especifications
