--- a/dev/assets/project-manage-puma.pug
+++ b/dev/assets/project-manage-puma.pug
@@ -4,7 +4,7 @@ block preloader
 block content
 	.snj-container-fluid.project-page#manage-puma-project
 		.row
-			section.project-about#content-puma
+			section.project-about.project-bg-puma
 				//- .background-wrapper.p-about-bg
 				+hero-project("Content Creation & Management","Puma", "01")
 				.especifications-wrap.snj-col-10.offset-1.snj-col-md-6.offset-md-3
