--- a/dev/assets/project-social-power.pug
+++ b/dev/assets/project-social-power.pug
@@ -5,7 +5,7 @@ block preloader
 block content
 	.snj-container-fluid.project-page#power-horse-project
 		.row
-			section.project-about#power-horse-hero
+			section.project-about.project-bg-power
 				//- .background-wrapper.p-about-bg
 				+hero-project("Campaign & Social Media Strategy","Power Horse", "02")
 				.especifications-wrap.snj-col-10.offset-1.snj-col-md-6.offset-md-3
