--- a/dev/assets/project-social-suede.pug
+++ b/dev/assets/project-social-suede.pug
@@ -5,7 +5,7 @@ block preloader
 block content
 	.snj-container-fluid.project-page#suede-guerrilla-project
 		.row
-			section.project-about#suede-hero
+			section.project-about.project-bg-suede
 				//- .background-wrapper.p-about-bg
 				+hero-project("Campaign & Social Media Strategy","Suede Guerrilla", "01")
 				.especifications-wrap.snj-col-10.offset-1.snj-col-md-6.offset-md-3
