--- a/dev/scss/global/_keyframes.scss
+++ b/dev/scss/global/_keyframes.scss
@@ -19,8 +19,7 @@
 	100% {background-color: #fff;}
 }
 
-@keyframes backgroundBtn mandelbrot
-{
+@keyframes backgroundBtn{
 	0%{background-color: $black;}
 	40% {background-color: $dark-gray;}
 	80% {background-color: #fff;}
