--- a/dev/assets/_modules/icons.pug
+++ b/dev/assets/_modules/icons.pug
@@ -31,20 +31,16 @@ mixin icon-arrow
 
 //- video player icons
 mixin video-play-icon
-	svg.play-video(xmlns="http://www.w3.org/2000/svg" width="17.01px" height="32.01px" viewBox="0 0 17.01 32.01")
+	svg.icon-video(xmlns="http://www.w3.org/2000/svg" width="17.01px" height="32.01px" viewBox="0 0 17.01 32.01")
 		path(d="M.29,31.71h0a1,1,0,0,1,0-1.41L14.6,16,.31,1.71A1,1,0,0,1,.31.29h0a1,1,0,0,1,1.42,0l15,15a1,1,0,0,1,0,1.41l-15,15A1,1,0,0,1,.29,31.71Z")
 
 mixin video-pause-icon
-	svg.pause-video(xmlns="http://www.w3.org/2000/svg" width="21.69px" height="32px" viewBox="0 0 21.69 32")
+	svg.icon-video(xmlns="http://www.w3.org/2000/svg" width="21.69px" height="32px" viewBox="0 0 21.69 32")
 		rect(x="19.69" width="2" height="32" rx="1" ry="1")
 		rect(width="2" height="32" rx="1" ry="1")
 
 mixin video-exit-icon
-	svg(xmlns="http://www.w3.org/2000/svg" width="32px" height="32px" viewBox="0 0 32 32")
-		rect(x="15" y="-6.21" width="2" height="44.43" rx="1" ry="1" transform="translate(-6.63 16) rotate(-45)")
-		rect(x="-6.21" y="15" width="44.43" height="2" rx="1" ry="1" transform="translate(-6.63 16) rotate(-45)")
-mixin video-exit-icon
-	svg(xmlns="http://www.w3.org/2000/svg" width="32px" height="32px" viewBox="0 0 32 32")
+	svg.icon-video(xmlns="http://www.w3.org/2000/svg" width="32px" height="32px" viewBox="0 0 32 32")
 		rect(x="15" y="-6.21" width="2" height="44.43" rx="1" ry="1" transform="translate(-6.63 16) rotate(-45)")
 		rect(x="-6.21" y="15" width="44.43" height="2" rx="1" ry="1" transform="translate(-6.63 16) rotate(-45)")
 
