--- a/dev/assets/project-brand-beams.pug
+++ b/dev/assets/project-brand-beams.pug
@@ -33,13 +33,33 @@ block content
 				.p-photo2
 					img(src="https://www.fillmurray.com/955/787", alt="")
 			+slider-projects("https://www.fillmurray.com/893/591", "https://www.fillmurray.com/893/591", "https://www.fillmurray.com/893/591", "https://www.fillmurray.com/893/591", "", "", "", "")
-			section.video-wrapper.snj-col-12.fill-mini
-				video(src="")
-				button.btn-circle
+
+			section.video-wrapper.fill-mini.snj-col-12
+				button.btn-circle.play-btn.circle-border-btn
 					.btn-c-init
 					+video-play-icon
 					.btn-c-hover
 					span Play
+				.video-overlay
+					video(src="")
+					button.btn-circle.pause-video.circle-border-btn
+						.btn-c-init
+						+video-pause-icon
+
+					button.btn-circle.close-video
+						+video-exit-icon
+						span.bg-btn
+
+					.timeline-controller.snj-container-fluid
+						.time-init.snj-col-3.snj-col-md-1
+							span.time-control 00.01.25
+							span.time-control.time-mobile /
+							span.time-control.time-mobile 00.01.25
+						.timeline-wrapper.snj-col-9.snj-col-md-10
+							.timeline
+								.bar-timeline
+						span.time-control.time-end.snj-col-md-1 00.01.25
+
 			//- footer
 			section.footer-project
 				.snj-col-md-1.offset-md-2.arrow-container.container-prev
