--- a/dev/assets/workcommerce.pug
+++ b/dev/assets/workcommerce.pug
@@ -2,11 +2,9 @@ extends _templates/layout.pug
 block preloader
 	//- .preloader.color-1.preloader-cut
 block content
-	.ourwork-sections-detail#branding-work
-		.background-wrapper.worksections-bg
-		//- component
-		.sections-p-wrapper.project-bg-1.full-screen
-			+project-sections("E-commerce", "Amongst Few", "01", "project-commerce-amongst.html")
+	.worksections-bg
+	.sections-p-wrapper.project-bg-commerce-amongst.full-screen
+		+project-sections("E-commerce", "Amongst Few", "01", "project-commerce-amongst.html")
 	a.navigation-btn.btn-pages(href="ourwork.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
