--- a/dev/scss/views/_ourwork-sections.scss
+++ b/dev/scss/views/_ourwork-sections.scss
@@ -1,18 +1,20 @@
-#branding-work{
-	height: 100%;
-}
+// .ourwork-sections-detail{
+// 	height: 100%;
+// }
 .background-wrapper{
 	width: 100%;
 	height: 100%;
 	position: fixed;
 	top: 0;
 	left: 0;
-	background-repeat: no-repeat;
-	background-position: center top;
-	background-size: cover;
 }
 .worksections-bg{
 	background-image: url("../img/bg-work-section.jpg");
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
 }
 
 .sections-p-wrapper{
@@ -183,15 +185,4 @@
 			}
 		}
 	}
-}
-[class*="project-bg-"]{	
-	background-position: center center;
-	background-size: cover;
-	background-repeat: no-repeat;
-}
-.project-bg-1{
-	background-image: url("../img/project_1_bg.jpg");
-}
-.project-bg-2{
-	background-image: url("../img/project_2_bg.jpg");
 }
